--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "^5.8.0",
     "@types/node": "20.10.4",
     "@types/react": "18.2.45",
     "@types/react-dom": "18.2.17",
@@ -18,6 +19,7 @@
     "fast-sort": "^3.4.0",
     "next": "14.0.4",
     "postcss": "8.4.32",
+    "prisma": "^5.8.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.6",
