--- a/package.json
+++ b/package.json
@@ -9,15 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.8.0",
     "@types/node": "20.10.4",
     "@types/react": "18.2.45",
     "@types/react-dom": "18.2.17",
     "autoprefixer": "10.4.16",
+    "bcrypt": "^5.1.1",
     "eslint": "8.55.0",
     "eslint-config-next": "14.0.4",
     "fast-sort": "^3.4.0",
     "next": "14.0.4",
+    "next-auth": "^4.24.5",
     "next-cloudinary": "^5.18.0",
     "postcss": "8.4.32",
     "prisma": "^5.8.0",
@@ -28,6 +31,7 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "daisyui": "^4.4.20"
   }
 }
