--- a/package.json
+++ b/package.json
@@ -6,11 +6,14 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "preview-email": "email dev -p3030"
   },
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.8.0",
+    "@react-email/components": "^0.0.12",
+    "@react-email/render": "^0.0.10",
     "@types/node": "20.10.4",
     "@types/react": "18.2.45",
     "@types/react-dom": "18.2.17",
@@ -26,6 +29,8 @@
     "prisma": "^5.8.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-email": "^1.10.0",
+    "resend": "^1.0.0",
     "tailwindcss": "3.3.6",
     "typescript": "5.3.3",
     "zod": "^3.22.4"
